# ai-middleware-java

./: .gitignore  README.md  pom.xml
common/: pom.xml
common/src/main/java/org/estech/common/constants/: ErrorCodes.java  ModelConstants.java
common/src/main/java/org/estech/common/dto/: ClassificationResult.java  ErrorResponse.java
common/src/main/java/org/estech/common/exception/: BusinessException.java  ErrorType.java
common/src/main/resources/: ApiResponse.java
gateway/: pom.xml  startup.sh
gateway/src/main/java/org/estech/gateway/: GatewayApplication.java
gateway/src/main/resources/: application.yml  policy.yaml
inference-grpc/: pom.xml  startup.sh
inference-grpc/src/main/java/org/estech/classify/: GrpcWebApplication.java
inference-grpc/src/main/proto/: classify.proto
inference-grpc/src/main/resources/: application.yml
inference-model/: pom.xml
moderation-api/: pom.xml  startup.sh
moderation-api/native/: CMakeLists.txt  imageops.cpp  org_estech_api_jni_NativeImageOps.h
moderation-api/src/main/java/org/estech/api/: ModerationApiApplication.java
moderation-api/src/main/java/org/estech/moderation/: ModerationApplication.java
moderation-api/src/main/resources/: application.yml
moderation-api/src/main/resources/native/: libimageops.dylib
moderation-flux/: pom.xml  startup.sh
moderation-flux/src/main/java/org/estech/flux/: ModerationFluxApplication.java
moderation-flux/src/main/java/org/estech/moderation/: ModerationFluxApplication.java
moderation-flux/src/main/resources/: application.yml
(+48 files in other folders)
